--- a/src/index.scss
+++ b/src/index.scss
@@ -10,6 +10,9 @@
 @import "pages/_Pages.scss";
 @import "pages/_Portfolio";
 @import "pages/_About.scss";
+@import "pages/_Services.scss";
+@import "pages/_StarterPackage.scss";
+@import "pages/_StandardPackage.scss";
 
 @import "shared/_Header.scss";
 @import "shared/_ContactForm.scss";
@@ -27,3 +30,4 @@
 @import "components/home/_TechExpertise.scss";
 @import "components/home/_FAQ.scss";
 @import "components/home/_WhyChoosePixel.scss";
+@import "components/home/_WebsitePackages.scss";
