--- a/src/index.scss
+++ b/src/index.scss
@@ -24,6 +24,7 @@
 @import "components/home/_Hero.scss";
 @import "components/home/_WhatWeDo.scss";
 @import "components/home/_WhatWeDoCards.scss";
+@import "components/home/_Subhero.scss";
 @import "components/home/_DiscoverDesignBuildLaunchEnjoy.scss";
 @import "components/home/_Scrollbar.scss";
 @import "components/home/_ScrollAnimationWhyChoose.scss";
