--- a/src/pages/_Portfolio.scss
+++ b/src/pages/_Portfolio.scss
@@ -3,7 +3,7 @@
   .swiper-prev {
     z-index: 100;
     position: absolute;
-    bottom: 0;
+    top: 50%;
     left: 10%;
     background: none;
     border: none;
