--- a/src/components/home/_WhyChoosePixel.scss
+++ b/src/components/home/_WhyChoosePixel.scss
@@ -1,9 +1,8 @@
 .why-choose-pixel {
   @include flex(column, center, center);
-  background: url("../../assets/images/why_pixel.webp");
-  background-size: cover;
-  background-repeat: no-repeat;
+
   width: 100vw;
+  padding-bottom: 4rem;
   .lg {
     display: none;
   }
@@ -14,7 +13,11 @@
     padding-bottom: 1.6rem;
   }
   &__card {
+    @include glass-card();
+    padding: 1.6rem;
+    border: 1px solid rgba($c-text, 0.1);
     max-width: 288px;
+    margin: 2rem 0;
     //margin: 0 auto;
     &--header {
       @include flex(row, space-around, center);
@@ -31,7 +34,8 @@
     }
     p {
       @include padding-y(1.6rem);
-      @include body-2();
+      @include brand-4();
+      letter-spacing: 1px;
     }
   }
 
@@ -73,7 +77,7 @@
 }
 @include media-breakpoint-up(lg) {
   .why-choose-pixel {
-    max-width: 880px;
+    max-width: 940px;
     .lg {
       display: block;
     }
@@ -84,7 +88,8 @@
       }
     }
     p {
-      @include body-1();
+      @include brand-3();
+      letter-spacing: 0.25px;
     }
   }
 }
