--- a/src/shared/_ContactForm.scss
+++ b/src/shared/_ContactForm.scss
@@ -12,28 +12,48 @@
       padding-bottom: 1.6rem;
     }
 
-    input,
-    textarea {
-      margin-bottom: 2rem;
-      background-color: #0f0713;
-      border: none;
-      border-bottom: 1px solid #f5f5f5;
+    input {
       width: 280px;
-
-      &::placeholder {
-        color: #f5f5f5;
+      height: 4.8rem;
+      border: 1px solid rgba($c-text, 0.2);
+      border-radius: 0.8rem;
+      box-shadow: $box-shadow;
+      background-color: #0e0612;
+      color: #fff;
+      padding: 0 1.2rem;
+      margin-bottom: 1.2rem;
+    }
+    textarea {
+      width: 280px;
+      height: 12rem;
+      border: 1px solid rgba($c-text, 0.2);
+      border-radius: 0.8rem;
+      box-shadow: $box-shadow;
+      background-color: #0e0612;
+      color: #fff;
+      padding: 1.2rem;
+      margin-bottom: 1.2rem;
+    }
+    .newsletter {
+      height: 4rem;
+      @include flex(row, center, center);
+      //margin-bottom: 1.2rem;
+      label {
+        font-size: 1.2rem;
+        margin-left: 0.8rem;
       }
     }
     .checkbox {
-      width: 25px;
+      width: 16px;
     }
     button {
       background-color: #111111;
       border: 1.5px solid #f2446e;
-      padding: 0.8rem 1.6rem;
+      padding: 0.8rem 4rem;
+      border-radius: 0.8rem;
       margin: auto;
       @include margin-y(2rem);
-      @include size(230px, 44px);
+      @include brand-2;
     }
   }
 }
