--- a/src/shared/_Header.scss
+++ b/src/shared/_Header.scss
@@ -2,6 +2,7 @@
   @include fixed-top-left(0, 0);
   @include glass-header();
   width: 100%;
+  //height: 5.4rem;
   padding: 0.8rem 0;
   box-shadow: $box-shadow;
   z-index: 5;
@@ -34,9 +35,6 @@
         color: $c-primary;
       }
     }
-  }
-  &__contact {
-    margin-right: 1.6rem;
   }
 }
 
