--- a/src/styles/_project.scss
+++ b/src/styles/_project.scss
@@ -20,6 +20,9 @@
   box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(8px);
 }
+button {
+  cursor: pointer;
+}
 
 @mixin cta-button {
   @include brand-2();
