--- a/src/pages/_Pages.scss
+++ b/src/pages/_Pages.scss
@@ -15,6 +15,15 @@
   border-radius: 0 5px 5px 0;
 }
 
+.form-error {
+  background-color: red;
+  padding: 0.4rem 1.2rem;
+  border-radius: 12px;
+  @include brand-3();
+  margin-top: 0.4rem;
+  margin-bottom: 0.4rem;
+}
+
 .home {
   .bbb {
     background:
