--- a/src/shared/_Header.scss
+++ b/src/shared/_Header.scss
@@ -1,52 +1,54 @@
-.header {
+.header-wrapper {
   @include fixed-top-left(0, 0);
-  @include glass-header();
   width: 100%;
-  //height: 5.4rem;
-  padding: 0.8rem 0;
-  box-shadow: $box-shadow;
   z-index: 5;
+  .header {
+    @include glass-header();
+    //height: 5.4rem;
+    padding: 0.8rem 0;
+    box-shadow: $box-shadow;
 
-  &__nav {
-    @include flex(row, flex-start, center);
-  }
-  &__logo-wrapper {
-    @include flex(row, flex-start, center);
-    padding-left: 1.6rem;
-  }
-  &__title {
-    @include brand-2();
-    color: $c-primary;
-    span {
-      display: none;
+    &__nav {
+      @include flex(row, flex-start, center);
     }
-  }
-  &__hamburger-menu {
-    cursor: pointer;
-    margin-left: auto;
-    margin-right: 1.6rem;
-  }
-  &__ul {
-    @include brand-3();
-    display: none;
-    li {
-      @include padding-x(1.6rem);
-      &:hover {
-        color: $c-primary;
+    &__logo-wrapper {
+      @include flex(row, flex-start, center);
+      padding-left: 1.6rem;
+    }
+    &__title {
+      @include brand-2();
+      color: $c-primary;
+      span {
+        display: none;
+      }
+    }
+    &__hamburger-menu {
+      cursor: pointer;
+      margin-left: auto;
+      margin-right: 1.6rem;
+    }
+    &__ul {
+      @include brand-3();
+      display: none;
+      li {
+        @include padding-x(1.6rem);
+        &:hover {
+          color: $c-primary;
+        }
       }
     }
   }
-}
 
-@include media-breakpoint-up(md) {
-  .header {
-    &__hamburger-menu {
-      display: none;
-    }
-    &__ul {
-      @include padding-y(0.8rem);
-      display: flex;
-      margin-left: auto;
+  @include media-breakpoint-up(md) {
+    .header {
+      &__hamburger-menu {
+        display: none;
+      }
+      &__ul {
+        @include padding-y(0.8rem);
+        display: flex;
+        margin-left: auto;
+      }
     }
   }
 }
