--- a/src/pages/_Pages.scss
+++ b/src/pages/_Pages.scss
@@ -41,6 +41,7 @@
     background-position: right center;
     background-repeat: no-repeat;
     background-size: cover;
+    max-width: 100%;
   }
   //max-width: 1200px;
   .sub-hero-divider {
