--- a/src/pages/_Pages.scss
+++ b/src/pages/_Pages.scss
@@ -220,7 +220,7 @@
 @include media-breakpoint-up(md) {
   .home {
     .sub-hero-divider {
-      width: 644px;
+      max-width: 644px;
     }
   }
   .quote {
