--- a/src/pages/_Portfolio.scss
+++ b/src/pages/_Portfolio.scss
@@ -152,9 +152,15 @@
       max-width: 55%;
     }
   }
-  // .chatwave {
-  //   width: 80%;
-  // }
+  .chatwave {
+    max-width: 35%;
+    @include media-breakpoint-up(md) {
+      max-width: 50%;
+    }
+    @include media-breakpoint-up(md) {
+      max-width: 55%;
+    }
+  }
   .portfolio-info {
     @include brand-4();
     max-width: 300px;
