--- a/src/pages/_Portfolio.scss
+++ b/src/pages/_Portfolio.scss
@@ -172,7 +172,10 @@
     }
   }
   &__tech-stack {
-    @include flex(row, center, center);
+    @include flex(column, center, center);
+    @include media-breakpoint-up(lg) {
+      @include flex(row, space-evenly, center);
+    }
     li {
       @include flex(column, space-evenly, center);
       height: 150px;
@@ -183,6 +186,10 @@
       border-radius: 12px;
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
       @include glass-card();
+      margin: 1.2rem 0;
+      @include media-breakpoint-up(lg) {
+        margin: 0 0.8rem;
+      }
     }
   }
 }
